added backend functionalities to handle recruiter company logo submission ,and show visited companies